--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "1.1.5",
+    "redux": "^4.0.0",
     "tachyons": "^4.11.1"
   },
   "scripts": {
@@ -14,8 +15,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-	"predeploy": "npm run build",
-  	"deploy": "gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "eslint-plugin-react": "^7.11.1",
